--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -5,7 +5,11 @@
 {% endblock %}
 
 {% block body %}
+<div>
+    {% autoescape off %}
+    {{ entry }}
+    {% endautoescape %}
+</div>
 
-{{ entry }}
 <a href="edit/{{ title }}">Edit {{ title }}.</a>
 {% endblock %}
